# hwpx-tomd

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-09-image-extraction.md
docs/superpowers/specs/: 2026-06-09-image-extraction-design.md
src/hwpx_tomd/: __init__.py  cli.py  core.py
tests/: conftest.py  test_hwpx_tomd.py
